[gd_scene load_steps=7 format=3 uid="uid://cksy1ff062fm4"]

[ext_resource type="Script" uid="uid://kbmrnmx34q6y" path="res://src/attacks/circular_channeling_attack.gd" id="1_2urnp"]
[ext_resource type="Shader" uid="uid://6lxphbtjejqf" path="res://src/shaders/circle_attack_channeling.gdshader" id="2_64t3d"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1fvuh"]
resource_local_to_scene = true
shader = ExtResource("2_64t3d")
shader_parameter/border_width = 0.005
shader_parameter/progress = 0.956697
shader_parameter/border_color = Color(1, 1, 1, 0.470588)
shader_parameter/fill_color = Color(1, 0, 0, 0.470588)

[sub_resource type="Gradient" id="Gradient_mt7cn"]
offsets = PackedFloat32Array(0.00649351, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_dbfo6"]
gradient = SubResource("Gradient_mt7cn")
width = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_2urnp"]
radius = 0.45

[node name="CircularChannelingAttack" type="Node2D"]
scale = Vector2(200, 200)
script = ExtResource("1_2urnp")
isEnemy = null

[node name="ChannelingSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_1fvuh")
texture = SubResource("GradientTexture1D_dbfo6")

[node name="ChannelingTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="Area2D" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_2urnp")

[connection signal="timeout" from="ChannelingTimer" to="." method="_on_channeling_timer_timeout"]
